--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -138,7 +138,7 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -191,7 +191,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -551,15 +551,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-7-18-free-v2ray-subscribe.htm" title="免费Clash SSR - 7月18日18.1M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月18日18.1M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-15-free-node-subscribe-links.htm" title="免费Clash SSR - 7月15日22.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 7月15日22.2M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-high-speed-nodes.htm" title="免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 7月11日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-node-share.htm" title="免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月21日19.6M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月12日21.5M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-25-free-subscribe-node.htm" title="免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 7月25日18.1M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-1-free-subscribe-node.htm" title="免费Clash SSR - 7月1日22.4M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 7月1日22.4M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-free-node-subscribe.htm" title="免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe.htm" title="免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月10日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="免费Clash SSR - 6月28日19.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 6月28日19.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-29-free-subscribe-node.htm" title="免费Clash SSR - 7月29日18.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 7月29日18.8M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-5-free-high-speed-nodes.htm" title="免费Clash SSR - 7月5日18.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 7月5日18.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -571,7 +571,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
